docs/requirements/v1.4.1/REQUIREMENTS.md

Requirements Summary
====================

# default

## As an API user, I want to perform a search using wildcards ([#457](https://github.com/NASA-PDS/registry-api/issues/457)) 


This requirement is not impacted by the current version
## As an API user, I want to know the children and ancestors of bundle, collections, and products ([#458](https://github.com/NASA-PDS/registry-api/issues/458)) 


This requirement is not impacted by the current version
## As an API user, I want to know the Product(s) that belong to a given Bundle. ([#453](https://github.com/NASA-PDS/registry-api/issues/453)) 


This requirement is not impacted by the current version
## As an API user, I want to know the Bundle for a given Product. ([#454](https://github.com/NASA-PDS/registry-api/issues/454)) 


This requirement is not impacted by the current version
## As an API user, I want to know the Collection(s) for a given Product. ([#451](https://github.com/NASA-PDS/registry-api/issues/451)) 


This requirement is not impacted by the current version
## As an API user, I want to know the Bundle for a given Collection. ([#452](https://github.com/NASA-PDS/registry-api/issues/452)) 


This requirement is not impacted by the current version
## As a user, when I request specific fields I want to get records which have at least one of these fields ([#455](https://github.com/NASA-PDS/registry-api/issues/455)) 


This requirement is not impacted by the current version
## As an API user, I want to get only the fields I explicitly requested ([#459](https://github.com/NASA-PDS/registry-api/issues/459)) 


This requirement is not impacted by the current version
## As an API user, I want to get an XML response ([#456](https://github.com/NASA-PDS/registry-api/issues/456)) 


This requirement is not impacted by the current version
## As an API user, I want to know the unique values for a specific API field. ([#284](https://github.com/NASA-PDS/registry-api/issues/284)) 


This requirement is not impacted by the current version
## As an API user, I want to search by a temporal range as an ISO-8601 time interval. ([#465](https://github.com/NASA-PDS/registry-api/issues/465)) 


This requirement is not impacted by the current version
## As an API user, I want to specify whether I get the latest or all versions of a product ([#447](https://github.com/NASA-PDS/registry-api/issues/447)) 


This requirement is not impacted by the current version
## As an API user, I want an average query response time of 1 second for q=* queries ([#69](https://github.com/NASA-PDS/registry-api/issues/69)) 


This requirement is not impacted by the current version
## As an API user, I want to handle long-running queries that take >10 seconds. ([#68](https://github.com/NASA-PDS/registry-api/issues/68)) 


This requirement is not impacted by the current version
## As a developer, I never want the label blob to be returned ([#467](https://github.com/NASA-PDS/registry-api/issues/467)) 


This requirement is not impacted by the current version
## As an API user, I want to search using URL parameters ([#462](https://github.com/NASA-PDS/registry-api/issues/462)) 


This requirement is not impacted by the current version
## As an operator, I want to have a wrapper script for starting up the API service ([#67](https://github.com/NASA-PDS/registry-api/issues/67)) 


This requirement is not impacted by the current version
## As a user, I want to know why my query syntax is invalid ([#66](https://github.com/NASA-PDS/registry-api/issues/66)) 


This requirement is not impacted by the current version
## As a user,  I want specific end points for products which are not collections or bundles ([#65](https://github.com/NASA-PDS/registry-api/issues/65)) 


This requirement is not impacted by the current version
## As a user, I want the /products end point to work for any class of products ([#64](https://github.com/NASA-PDS/registry-api/issues/64)) 


This requirement is not impacted by the current version
## As a user, I want the end-point /api to redirect to the API documentation ([#63](https://github.com/NASA-PDS/registry-api/issues/63)) 


This requirement is not impacted by the current version
## As a user, I want to have a complete default fields (for now at least) ([#155](https://github.com/NASA-PDS/registry-api/issues/155)) 


This requirement is not impacted by the current version
## As a user, I want an end-point of each of the PDS4 IM classes of products ([#461](https://github.com/NASA-PDS/registry-api/issues/461)) 


This requirement is not impacted by the current version
## As a user, I want to query for all versions of a product ([#438](https://github.com/NASA-PDS/registry-api/issues/438)) 


This requirement is not impacted by the current version
## As an API user, I want to get the latest version of a product, by default ([#449](https://github.com/NASA-PDS/registry-api/issues/449)) 


This requirement is not impacted by the current version
## As an API user, I want to be able to use the API for free text search ([#460](https://github.com/NASA-PDS/registry-api/issues/460)) 


This requirement is not impacted by the current version
## As a user, I want to receive a JSON response that contains the PDS4 label metadata in JSON format (application/vnd.nasa.pds.pds4+json) ([#450](https://github.com/NASA-PDS/registry-api/issues/450)) 


This requirement is not impacted by the current version
## As a client developer, I want to facet on 1 or more fields in the registry ([#283](https://github.com/NASA-PDS/registry-api/issues/283)) 


This requirement is not impacted by the current version
## As an API user, I want to know how long a request took to complete ([#463](https://github.com/NASA-PDS/registry-api/issues/463)) 


This requirement is not impacted by the current version
## As a API manager, I want to restrict access to registered products that should not be publicly accessible ([#466](https://github.com/NASA-PDS/registry-api/issues/466)) 


This requirement is not impacted by the current version
## As an API user, I want to explicitly request the latest version of a product ([#448](https://github.com/NASA-PDS/registry-api/issues/448)) 


This requirement is not impacted by the current version
## As a user, I want to have singular urls when I should only expect a single element in the response ([#61](https://github.com/NASA-PDS/registry-api/issues/61)) 


This requirement is not impacted by the current version
## As a user, I want to clearly see which formats are accepted by the API when a 406 error is raised ([#446](https://github.com/NASA-PDS/registry-api/issues/446)) 


This requirement is not impacted by the current version
## As an API user, I want a CSV response format option ([#445](https://github.com/NASA-PDS/registry-api/issues/445)) 


This requirement is not impacted by the current version
## As a user, I want to receive a XML response that contains the PDS4 label metadata in XML format (application/vnd.nasa.pds.pds4+xml)  ([#440](https://github.com/NASA-PDS/registry-api/issues/440)) 


This requirement is not impacted by the current version
## As a user, I want to get a key-value-pair JSON response ([#444](https://github.com/NASA-PDS/registry-api/issues/444)) 


This requirement is not impacted by the current version
## As a user, I want to see the version of the API specification in the URL of the service ([#59](https://github.com/NASA-PDS/registry-api/issues/59)) 


This requirement is not impacted by the current version
## As a user, I want to search for all versions of a product where the LID changed during the product history ([#427](https://github.com/NASA-PDS/registry-api/issues/427)) 


This requirement is not impacted by the current version
## As a user, by default, I want to search only for the latest versions of all products on the `/products` endpoint ([#426](https://github.com/NASA-PDS/registry-api/issues/426)) 


This requirement is not impacted by the current version
## As a user, I want to see the version of the API specification in the URL of the service ([#8](https://github.com/NASA-PDS/registry-api/issues/8)) 


This requirement is not impacted by the current version
## As a user, I want the /products end point to work for any class of products ([#11](https://github.com/NASA-PDS/registry-api/issues/11)) 


This requirement is not impacted by the current version
## As a user,  I want to query for products from any PDS4 product type ([#12](https://github.com/NASA-PDS/registry-api/issues/12)) 


This requirement is not impacted by the current version
## As a user, I want to know why my query syntax is invalid ([#13](https://github.com/NASA-PDS/registry-api/issues/13)) 


This requirement is not impacted by the current version
## As an operator, I want to have a wrapper script for starting up the API service ([#14](https://github.com/NASA-PDS/registry-api/issues/14)) 


This requirement is not impacted by the current version
## As an API user, I want to handle long-running queries that take >10 seconds. ([#15](https://github.com/NASA-PDS/registry-api/issues/15)) 


This requirement is not impacted by the current version
## As an API user, I want an average query response time of 1 second for q=* queries ([#16](https://github.com/NASA-PDS/registry-api/issues/16)) 


This requirement is not impacted by the current version
## As an API caller(user) I want to specify fields for endpoints given a lidvid ([#80](https://github.com/NASA-PDS/registry-api/issues/80)) 


This requirement is not impacted by the current version
## As a user, I want the API response media types to be compliant with RFC 6838 ([#464](https://github.com/NASA-PDS/registry-api/issues/464)) 


This requirement is not impacted by the current version
## As a user, I want to receive error messages when an invalid request is submitted to the API ([#443](https://github.com/NASA-PDS/registry-api/issues/443)) 


This requirement is not impacted by the current version
## the default proposed mime type in swagger-ui.html should be 'application/json' ([#88](https://github.com/NASA-PDS/registry-api/issues/88)) 


This requirement is not impacted by the current version
## As a user, I want to have an administrator contact when I am getting an error 500 from the server ([#109](https://github.com/NASA-PDS/registry-api/issues/109)) 


This requirement is not impacted by the current version
## As a user I want consistent /type/lidvlid/{child,parent}/{latest,all} ([#126](https://github.com/NASA-PDS/registry-api/issues/126)) 


This requirement is not impacted by the current version
## As a user, I want to get the product identifiers in a application/kvp+json format ([#132](https://github.com/NASA-PDS/registry-api/issues/132)) 


This requirement is not impacted by the current version
## As a user, I want to be able to access the Search API Swagger interface from pds.nasa.gov ([#442](https://github.com/NASA-PDS/registry-api/issues/442)) 


This requirement is not impacted by the current version
## As a user, I want to be able to paginate over any number of results returned from a query. ([#176](https://github.com/NASA-PDS/registry-api/issues/176)) 


This requirement is not impacted by the current version
## As a user, I want to flush the API cache after archive status has been changed ([#228](https://github.com/NASA-PDS/registry-api/issues/228)) 


This requirement is not impacted by the current version
## As a user, I want to query only the latest versions of products unless explicitly requested ([#441](https://github.com/NASA-PDS/registry-api/issues/441)) 


This requirement is not impacted by the current version
## As a web client developer, I want to be able to access the API without having to ask for authorization ([#192](https://github.com/NASA-PDS/registry-api/issues/192)) 


This requirement is not impacted by the current version
## As a user, I want to get application/json response format by default if I request an API url in my browser ([#439](https://github.com/NASA-PDS/registry-api/issues/439)) 


This requirement is not impacted by the current version
## As a registry-tool/registry-user I want to ensure leading multiple forward-slashes in request paths are stripped out ([#208](https://github.com/NASA-PDS/registry-api/issues/208)) 


This requirement is not impacted by the current version
## As a user, I want the API to support redundant `/` in the url ([#212](https://github.com/NASA-PDS/registry-api/issues/212)) 


This requirement is not impacted by the current version
## As a user, I want to know the members of a bundle product ([#223](https://github.com/NASA-PDS/registry-api/issues/223)) 


This requirement is not impacted by the current version
## As a user, I want to know the unit or nilReason for an attribute. ([#307](https://github.com/NASA-PDS/registry-api/issues/307)) 


This requirement is not impacted by the current version
## As a user, I want to search by any metadata attribute ([#282](https://github.com/NASA-PDS/registry-api/issues/282)) 


This requirement is not impacted by the current version
## Suggest: Return Content-Type application/json by default ([#248](https://github.com/NASA-PDS/registry-api/issues/248)) 


This requirement is not impacted by the current version
## As a user, I want to see available query params in the swagger documentation ([#249](https://github.com/NASA-PDS/registry-api/issues/249)) 


This requirement is not impacted by the current version
## As a user, I want to be informed if some of the members of bundle or collection where not retrieve or are not visible yet for me ([#270](https://github.com/NASA-PDS/registry-api/issues/270)) 


This requirement is not impacted by the current version
## As a user, I want to apply an additional query filter (`q=`) to members of an aggregate product (`/products/{identifier}/members`) ([#298](https://github.com/NASA-PDS/registry-api/issues/298)) 


This requirement is not impacted by the current version
## As a user, I want the /properties endpoint to display counts for products having each property ([#323](https://github.com/NASA-PDS/registry-api/issues/323)) 


This requirement is not impacted by the current version
## As a user, I want the /properties endpoint to display range/enum type and values for each property ([#324](https://github.com/NASA-PDS/registry-api/issues/324)) 


This requirement is not impacted by the current version
## As a user, I want the /properties endpoint to include a link to explanatory documentation (i.e. DD or similar) ([#325](https://github.com/NASA-PDS/registry-api/issues/325)) 


This requirement is not impacted by the current version
## As a PDS operator, I want to know the health of the registry API service ([#336](https://github.com/NASA-PDS/registry-api/issues/336)) 


This requirement is not impacted by the current version
## Remove support (provenance) module migrated to registry-sweeper repository ([#340](https://github.com/NASA-PDS/registry-api/issues/340)) 


This requirement is not impacted by the current version
## As a user, I want the PDS4 properties to be case agnositics ([#354](https://github.com/NASA-PDS/registry-api/issues/354)) 


This requirement is not impacted by the current version
## As a user, I want my API request to execute successfully even when the registry contains corrupted documents ([#361](https://github.com/NASA-PDS/registry-api/issues/361)) 


This requirement is not impacted by the current version
## As a user, I want to get an error 400 and relevant suggestions when the properties I am using in the q and fields do not exist in the registry ([#363](https://github.com/NASA-PDS/registry-api/issues/363)) 


This requirement is not impacted by the current version
## As a user, I want to use an URL parameters to chose the response format ([#371](https://github.com/NASA-PDS/registry-api/issues/371)) 


This requirement is not impacted by the current version
## As a user, I want to pretty print the response from command line (e.g. curl) without need for additional tool (e.g. json_pp) ([#372](https://github.com/NASA-PDS/registry-api/issues/372)) 


This requirement is not impacted by the current version
## As a user, I want to get a simple html response format from the API ([#374](https://github.com/NASA-PDS/registry-api/issues/374)) 


This requirement is not impacted by the current version
## As a user, I want to sort by ascending/descending order of a specific field ([#385](https://github.com/NASA-PDS/registry-api/issues/385)) 


This requirement is not impacted by the current version
## As a developer, I want to have a C client for the PDS-API ([#393](https://github.com/NASA-PDS/registry-api/issues/393)) 


This requirement is not impacted by the current version
## As a user, I don't want to see the default fields in properties structure when I use the fields= parameter ([#394](https://github.com/NASA-PDS/registry-api/issues/394)) 


This requirement is not impacted by the current version
## As a user, I want to query for documents where a specific search field exists in the document ([#406](https://github.com/NASA-PDS/registry-api/issues/406)) 


This requirement is not impacted by the current version
## As a user, I want to get search results starting for the 1000th result ([#415](https://github.com/NASA-PDS/registry-api/issues/415)) 


This requirement is not impacted by the current version
## As a web developer, I want to access read-only any feature provided by opensearch ([#433](https://github.com/NASA-PDS/registry-api/issues/433)) 


This requirement is not impacted by the current version
## As a user, I want to get a product description given a lidvid ([#434](https://github.com/NASA-PDS/registry-api/issues/434)) 


This requirement is not impacted by the current version
## As a user, by default, I want to resolve the latest version of a product when given a product logical_identifier (LID) (`/products/{logical_identifier}` endpoint)  ([#435](https://github.com/NASA-PDS/registry-api/issues/435)) 


This requirement is not impacted by the current version
## As a user, I want to get all product versions associated to one lid ([#436](https://github.com/NASA-PDS/registry-api/issues/436)) 


This requirement is not impacted by the current version
## As a user, I want to be able to support wildcards anywhere within a given string ([#437](https://github.com/NASA-PDS/registry-api/issues/437)) 


This requirement is not impacted by the current version
## As a user, I want to filter the products by any available PDS4 property using a combination of comparison, logical, and precedence grouping operators ([#469](https://github.com/NASA-PDS/registry-api/issues/469)) 


This requirement is not impacted by the current version
## As a user, I want to know the applicable tools that can be used on a specific product ([#472](https://github.com/NASA-PDS/registry-api/issues/472)) 


This requirement is not impacted by the current version
## As a user, I want to know the primary members of an aggregate product ([#474](https://github.com/NASA-PDS/registry-api/issues/474)) 


This requirement is not impacted by the current version
## As a user, by default, I want to search for only the latest versions of all products on the `/products/{identifier}/members` endpoint ([#484](https://github.com/NASA-PDS/registry-api/issues/484)) 


This requirement is not impacted by the current version
## As a user, by default, I want to search for only the latest versions of all products on the `/products/{identifier}/members/members` endpoint ([#485](https://github.com/NASA-PDS/registry-api/issues/485)) 


This requirement is not impacted by the current version
## As a user, by default, I want to search for only the latest versions of all products on the `/products/{identifier}/member-of` endpoint ([#486](https://github.com/NASA-PDS/registry-api/issues/486)) 


This requirement is not impacted by the current version
## As a user, by default, I want to search only for the latest versions of all products on the `/products/{identifier}/member-of/member-of` endpoint ([#487](https://github.com/NASA-PDS/registry-api/issues/487)) 


This requirement is not impacted by the current version
## As a user, by default, I want to search for the latest versions of all products on the `/classes/{class}` endpoint unless explicitly requested ([#488](https://github.com/NASA-PDS/registry-api/issues/488)) 


This requirement is not impacted by the current version
## As a user, I want to apply an additional query filter (`q=`) to members of the members of an aggregate product (`/products/{identifier}/members/members`) ([#490](https://github.com/NASA-PDS/registry-api/issues/490)) 


This requirement is not impacted by the current version
## As a user, I want to apply an additional query filter (`q=`) to the `/products/{identifier}/member-of` result set ([#491](https://github.com/NASA-PDS/registry-api/issues/491)) 


This requirement is not impacted by the current version
## As a user, I want to apply an additional query filter (`q=`) to the `/products/{identifier}/member-of/member-of` result set ([#492](https://github.com/NASA-PDS/registry-api/issues/492)) 


This requirement is not impacted by the current version
## As a user, I want to apply an additional query filter (`q=`) to the `/classes/{class}` result set ([#493](https://github.com/NASA-PDS/registry-api/issues/493)) 


This requirement is not impacted by the current version
## As a user, I want to filter the products by any available PDS4 property using comparison operators ([#494](https://github.com/NASA-PDS/registry-api/issues/494)) 


This requirement is not impacted by the current version
## As a user, I want to filter the products by any available PDS4 property by combining comparison operators using logical operators ([#495](https://github.com/NASA-PDS/registry-api/issues/495)) 


This requirement is not impacted by the current version
## As a user, I want to receive metadata only in the API responses (no binary blobs) ([#497](https://github.com/NASA-PDS/registry-api/issues/497)) 


This requirement is not impacted by the current version
## As a user, by default, I want to resolve the latest version of a product when given a product logical_identifier (LID) (`/products/{logical_identifier}` endpoint) ([#503](https://github.com/NASA-PDS/registry-api/issues/503)) 


This requirement is not impacted by the current version
## As a user, I want to resolve all versions of a product when given a product `{identifier}` ([#504](https://github.com/NASA-PDS/registry-api/issues/504)) 


This requirement is not impacted by the current version
## As a user, I want to know what are all the possible properties I can search against (`/properties`) ([#506](https://github.com/NASA-PDS/registry-api/issues/506)) 


This requirement is not impacted by the current version
## As a user, I want to search across all data in the registry, including superseded data ([#508](https://github.com/NASA-PDS/registry-api/issues/508)) 


This requirement is not impacted by the current version
## As a user, I want to get all the products for a specific PDS4 product class ([#511](https://github.com/NASA-PDS/registry-api/issues/511)) 


This requirement is not impacted by the current version
## As a user, I want to get a description of the API when I request it from its base URL in a web browser ([#516](https://github.com/NASA-PDS/registry-api/issues/516)) 


This requirement is not impacted by the current version